tests/error/enum_errors/bad_variant_init.err
Error: Attribute not found (at $FILE:9:19)
  | 
7 | @guppy
8 | def main() -> None:
9 |     msg1 = Message.BadVariant()
  |                    ^^^^^^^^^^ `Message` has no attribute `BadVariant`

Guppy compilation failed due to 1 previous error
